<resources>
    <string name="app_name">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="photos">Photos</string>
    <string name="finish">Finish</string>
    <string name="image">Choose Image</string>
    <string name="camera">Camera</string>
    <string name="internet">internet</string>
    <string name="my_recipes">My Recipes</string>
    <string name="category">Category</string>
    <string name="all_recipes">All Recipes</string>
    <string name="diet">Diet</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="store">Store</string>
    <string name="coming_soon">Coming Soon:</string>
    <string name="feature">This feature will allow you to order a custom recipe book made of all the recipes in your favorites.</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure you want to delete this recipe?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_recipes">Number of recipes</string>

</resources>